# efficient-kan

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Gemfile  README.md  _config.yml  api.md  benchmarking.md  development.md  grid-updates.md  index.md  quickstart.md  regularization.md  release-checklist.md  reproducibility.md  search.html  third-party-notices.md
docs/_data/: navigation.yml  toc.yml
docs/_includes/: editable.html  footer.html  footer_custom.html  head.html  header.html  nav_footer_custom.html
docs/_layouts/: default.html
docs/_sass/color_schemes/: efficient-kan.scss
docs/_sass/custom/: custom.scss  setup.scss
docs/assets/css/: efficient-kan.css  style.scss
examples/: mnist.py
scripts/: benchmark.py  provenance.py  validate.sh
src/efficient_kan/: __init__.py  benchmark.py  kan.py  provenance.py
tests/: test_kan.py
