[project]
name = "efficient-kan"
version = "0.1.0"
description = "An efficient pure-PyTorch implementation of Kolmogorov-Arnold Network (KAN)."
authors = [
    {name = "Blealtan Cao", email = "blealtan@outlook.com"},
]
dependencies = [
    "torch>=2.3.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]
examples = [
    "torchvision>=0.18.0",
    "tqdm>=4.66.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py38"
